--- a/CodeNameFive/View/Base.lproj/Main.storyboard
+++ b/CodeNameFive/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="d9k-L1-cRK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BEk-gK-osk">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -289,6 +289,88 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ogN-DH-8K8" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2560.8695652173915" y="97.767857142857139"/>
+        </scene>
+        <!--MessagesVC-->
+        <scene sceneID="jQJ-GW-jwX">
+            <objects>
+                <viewController id="BEk-gK-osk" customClass="MessagesVC" customModule="CNF" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tyf-VL-RUM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jIC-BV-xge">
+                                <rect key="frame" x="0.0" y="44" width="414" height="743.66666666666663"/>
+                                <color key="backgroundColor" name="TableViewBackGround"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BEk-gK-osk" id="P2h-hq-gC0"/>
+                                    <outlet property="delegate" destination="BEk-gK-osk" id="muz-zr-Xc0"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jeD-1V-1an">
+                                <rect key="frame" x="0.0" y="787.66666666666663" width="414" height="74.333333333333371"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type a message " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hUp-41-jGv">
+                                        <rect key="frame" x="8" y="17" width="325" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="325" id="O6J-J3-dNT"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="send" translatesAutoresizingMaskIntoConstraints="NO" id="nMv-1S-DrS">
+                                        <rect key="frame" x="351" y="17" width="39" height="33"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" name="BottomViewColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="hUp-41-jGv" secondAttribute="bottom" constant="23.333333333333371" id="BpL-iI-kvN"/>
+                                    <constraint firstItem="hUp-41-jGv" firstAttribute="leading" secondItem="jeD-1V-1an" secondAttribute="leadingMargin" id="Cml-rk-SGp"/>
+                                    <constraint firstItem="hUp-41-jGv" firstAttribute="top" secondItem="jeD-1V-1an" secondAttribute="top" constant="17" id="XjF-W2-7e1"/>
+                                    <constraint firstItem="nMv-1S-DrS" firstAttribute="leading" secondItem="hUp-41-jGv" secondAttribute="trailing" constant="18" id="Zqg-HN-5Ru"/>
+                                    <constraint firstItem="hUp-41-jGv" firstAttribute="centerY" secondItem="nMv-1S-DrS" secondAttribute="centerY" id="iqL-yF-jRS"/>
+                                    <constraint firstItem="hUp-41-jGv" firstAttribute="top" secondItem="nMv-1S-DrS" secondAttribute="top" id="jh6-VW-wRi"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jeD-1V-1an" firstAttribute="bottom" secondItem="nAJ-hd-Ycb" secondAttribute="bottom" id="4h6-j7-kJ1"/>
+                            <constraint firstItem="jeD-1V-1an" firstAttribute="leading" secondItem="nAJ-hd-Ycb" secondAttribute="leading" id="62P-Oa-5ST"/>
+                            <constraint firstItem="nAJ-hd-Ycb" firstAttribute="trailing" secondItem="jIC-BV-xge" secondAttribute="trailing" id="8es-Cz-mc3"/>
+                            <constraint firstItem="jeD-1V-1an" firstAttribute="height" secondItem="jIC-BV-xge" secondAttribute="height" multiplier="0.1" id="EV2-Cb-HiA"/>
+                            <constraint firstItem="jeD-1V-1an" firstAttribute="top" secondItem="jIC-BV-xge" secondAttribute="bottom" id="Odd-1e-b3c"/>
+                            <constraint firstItem="jeD-1V-1an" firstAttribute="width" secondItem="jIC-BV-xge" secondAttribute="width" id="V1d-64-Aid"/>
+                            <constraint firstItem="jIC-BV-xge" firstAttribute="leading" secondItem="nAJ-hd-Ycb" secondAttribute="leading" id="enJ-qE-qp1"/>
+                            <constraint firstItem="jeD-1V-1an" firstAttribute="trailing" secondItem="nAJ-hd-Ycb" secondAttribute="trailing" id="fUi-Ow-K9z"/>
+                            <constraint firstItem="jIC-BV-xge" firstAttribute="top" secondItem="nAJ-hd-Ycb" secondAttribute="top" id="xWu-bw-lWk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nAJ-hd-Ycb"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="jIC-BV-xge" id="X0N-wU-wGt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iTg-Pj-Pss" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-907.24637681159425" y="101.78571428571428"/>
+        </scene>
+        <!--Message InboxTVC-->
+        <scene sceneID="LmY-I2-C55">
+            <objects>
+                <tableViewController id="tju-Ma-Odn" customClass="MessageInboxTVC" customModule="CNF" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lCy-sk-bhd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <connections>
+                            <outlet property="dataSource" destination="tju-Ma-Odn" id="iPv-ZC-l4x"/>
+                            <outlet property="delegate" destination="tju-Ma-Odn" id="egP-g5-2hd"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zZQ-GC-u96" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-123" y="102"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2AC-SS-ys6">
@@ -3753,7 +3835,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0ZK-zg-66s">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" name="TableViewBackGround"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="separatorColor" name="tableCellColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MessagesCell" rowHeight="70" id="oiT-U9-g4m" customClass="MessagesCell" customModule="CNF" customModuleProvider="target">
@@ -3764,22 +3846,33 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chat_bubble_sent" translatesAutoresizingMaskIntoConstraints="NO" id="Ydc-bn-WcN">
-                                                    <rect key="frame" x="60" y="15" width="294" height="40"/>
+                                                    <rect key="frame" x="20" y="11" width="334" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="BgO-15-pv2"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="un0-XH-kYL">
+                                                    <rect key="frame" x="35" y="53.666666666666664" width="26" height="16.333333333333336"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="un0-XH-kYL" secondAttribute="trailing" constant="20" symbolic="YES" id="Ak1-rS-gYe"/>
+                                                <constraint firstAttribute="bottom" secondItem="un0-XH-kYL" secondAttribute="bottom" id="GGZ-tI-Rgo"/>
+                                                <constraint firstItem="Ydc-bn-WcN" firstAttribute="top" secondItem="vP3-q9-LD0" secondAttribute="topMargin" id="NPp-Jc-gK7"/>
                                                 <constraint firstAttribute="trailing" secondItem="Ydc-bn-WcN" secondAttribute="trailing" constant="60" id="VRr-SC-Hkk"/>
-                                                <constraint firstItem="Ydc-bn-WcN" firstAttribute="centerX" secondItem="vP3-q9-LD0" secondAttribute="centerX" id="Vtq-of-MFu"/>
-                                                <constraint firstItem="Ydc-bn-WcN" firstAttribute="centerY" secondItem="vP3-q9-LD0" secondAttribute="centerY" id="xRR-RD-bwn"/>
+                                                <constraint firstItem="un0-XH-kYL" firstAttribute="leading" secondItem="vP3-q9-LD0" secondAttribute="leading" constant="35" id="ofU-rM-eYB"/>
+                                                <constraint firstItem="Ydc-bn-WcN" firstAttribute="leading" secondItem="vP3-q9-LD0" secondAttribute="leadingMargin" id="uw4-Xm-juU"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" name="tableCellColor"/>
                                         <connections>
                                             <outlet property="bubbleImage" destination="Ydc-bn-WcN" id="JEL-Db-LC8"/>
                                             <outlet property="heightConstrainsOfBubble" destination="BgO-15-pv2" id="f9O-ZG-GG5"/>
+                                            <outlet property="leftContrain" destination="uw4-Xm-juU" id="EVA-cj-mEm"/>
+                                            <outlet property="rightConstrain" destination="VRr-SC-Hkk" id="AVu-l8-WPM"/>
+                                            <outlet property="statusLbl" destination="un0-XH-kYL" id="f8w-YS-yds"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -3821,6 +3914,7 @@
         <image name="menu" width="25" height="24"/>
         <image name="metronome" catalog="system" width="128" height="121"/>
         <image name="phone.fill" catalog="system" width="128" height="114"/>
+        <image name="send" width="51" height="56"/>
         <image name="sheqelsign.square" catalog="system" width="128" height="114"/>
         <image name="thumbs-down" width="32" height="32"/>
         <image name="thumbs-up" width="32" height="32"/>
