--- a/CodeNameFive/View/Base.lproj/Main.storyboard
+++ b/CodeNameFive/View/Base.lproj/Main.storyboard
@@ -300,7 +300,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jIC-BV-xge">
                                 <rect key="frame" x="0.0" y="44" width="414" height="743.66666666666663"/>
-                                <color key="backgroundColor" name="TableViewBackGround"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BEk-gK-osk" id="P2h-hq-gC0"/>
                                     <outlet property="delegate" destination="BEk-gK-osk" id="muz-zr-Xc0"/>
@@ -310,21 +310,19 @@
                                 <rect key="frame" x="0.0" y="787.66666666666663" width="414" height="74.333333333333371"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type a message " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hUp-41-jGv">
-                                        <rect key="frame" x="8" y="17" width="325" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="325" id="O6J-J3-dNT"/>
-                                        </constraints>
+                                        <rect key="frame" x="8" y="17" width="337" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="send" translatesAutoresizingMaskIntoConstraints="NO" id="nMv-1S-DrS">
-                                        <rect key="frame" x="351" y="17" width="39" height="33"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="send" translatesAutoresizingMaskIntoConstraints="NO" id="nMv-1S-DrS">
+                                        <rect key="frame" x="363" y="17" width="51" height="34"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" name="BottomViewColor"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="hUp-41-jGv" secondAttribute="bottom" constant="23.333333333333371" id="BpL-iI-kvN"/>
                                     <constraint firstItem="hUp-41-jGv" firstAttribute="leading" secondItem="jeD-1V-1an" secondAttribute="leadingMargin" id="Cml-rk-SGp"/>
+                                    <constraint firstAttribute="trailing" secondItem="nMv-1S-DrS" secondAttribute="trailing" id="DaQ-cP-eRU"/>
                                     <constraint firstItem="hUp-41-jGv" firstAttribute="top" secondItem="jeD-1V-1an" secondAttribute="top" constant="17" id="XjF-W2-7e1"/>
                                     <constraint firstItem="nMv-1S-DrS" firstAttribute="leading" secondItem="hUp-41-jGv" secondAttribute="trailing" constant="18" id="Zqg-HN-5Ru"/>
                                     <constraint firstItem="hUp-41-jGv" firstAttribute="centerY" secondItem="nMv-1S-DrS" secondAttribute="centerY" id="iqL-yF-jRS"/>
@@ -332,7 +330,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" name="CardColor"/>
                         <constraints>
                             <constraint firstItem="jeD-1V-1an" firstAttribute="bottom" secondItem="nAJ-hd-Ycb" secondAttribute="bottom" id="4h6-j7-kJ1"/>
                             <constraint firstItem="jeD-1V-1an" firstAttribute="leading" secondItem="nAJ-hd-Ycb" secondAttribute="leading" id="62P-Oa-5ST"/>
@@ -347,6 +345,7 @@
                         <viewLayoutGuide key="safeArea" id="nAJ-hd-Ycb"/>
                     </view>
                     <connections>
+                        <outlet property="bottomView" destination="jeD-1V-1an" id="uYl-D5-Nc3"/>
                         <outlet property="tableView" destination="jIC-BV-xge" id="X0N-wU-wGt"/>
                     </connections>
                 </viewController>
